# manufacturing-data-quality-platform

./: README.md  list_tables.py  pyproject.toml  requirements.txt
docs/: secom_data_dictionary.md  secom_findings.md  secom_modeling_findings.md
scripts/: build_marts.py  build_staging.py  generate_web_data.py  run_full_pipeline.py  run_modeling_pipeline.py  run_public_notebook_comparison.py  run_raw_ingest.py
sql/mart/: 01_create_mart_schema.sql
sql/raw/: 01_create_raw_schema.sql
sql/staging/: 01_create_staging_schema.sql
src/: __init__.py
src/db/: __init__.py  connection.py
src/etl/: __init__.py  build_canonical_secom.py  build_signals.py  feature_catalog.py  raw_ingest.py  secom_join.py
src/marts/: __init__.py  anomaly_model_benchmark.py  daily_failure_rollup.py  daily_yield_trend.py  feature_action_summary.py  feature_coverage_summary.py  feature_failure_relationship.py  feature_groups.py  feature_missingness.py  feature_priority_index.py  final_model_inspection_curve.py  final_model_test_results.py  label_distribution.py  model_benchmark.py  model_confusion_summary.py  model_cv_results.py  model_feature_importance.py  model_feature_selection_summary.py  model_inspection_metrics.py  model_probability_bins.py  model_registry.py  model_threshold_analysis.py  model_threshold_cost_curve.py  overview.py  (+4 more)
tests/: __init__.py  test_build_canonical_secom.py  test_build_signals.py  test_feature_catalog.py  test_marts.py  test_secom_join.py
website/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+35 files in other folders)
